<resources>
    <string name="app_name">eChange</string>
    <string name="splash_app_name_logo">e-Change</string>
    <string name="splash_text_slogan">Seamless Checkout Experience…</string>
    <string name="resend_otp"><b><u>Resend OTP</u></b></string>
    
    <string name="good_afternoon">Good afternoon, Sammy</string>
    <string name="wallet_bala">Wallet balance</string>
    <string name="some_id">5000</string>
    <string name="fund_wallet">Fund wallet</string>
    <string name="request_cas">Request Cash</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="send_cash">Send Cash</string>
    <string name="buy_data">Buy Data</string>
    <string name="pay_with_qr">Pay with QR Code</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="fund_account">Fund account</string>
</resources>
