<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overview"
        android:enabled="true"
        android:icon="@drawable/kwuo"
        android:orderInCategory="10"
        android:title="@string/overview"
        android:visible="true"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:orderInCategory="20"
        android:title="@string/history"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/fund_account"
        android:icon="@drawable/vector_fund_account"
        android:orderInCategory="100"
        android:title="@string/fund_account"
        app:showAsAction="ifRoom|withText"/>


</menu>